# ApacheKafkaTest

./: .dockerignore  .gitignore  README.md  connectors.sh  docker-compose.yaml  scelte.md  topics-creation.sh
archiviazione/influxdb/: docker-compose.yml
archiviazione/s3/: create-bucket.sh  (+1 more)
docs/: class_diagram.mdj  kafka.md
kafka-cluster/: docker-compose.yaml  topic-creation.sh
kafka_cluster/: docker-compose.yml  topic-creation.sh
producer/: docker-compose.yaml  docker-compose.yml  dockerfile
producer_service/: .dockerignore  .gitignore  dockerfile  pyproject.toml
producer_service/src/simulation/: __main__.py
producer_service/src/simulation/config/: cfg.py  config.py
producer_service/src/simulation/core/: messages.py
producer_service/src/simulation/generation/: data.py  generators.py
producer_service/src/simulation/messages/: content.py  creation.py  data.py  factories.py  generation.py  records.py  serialization.py
producer_service/src/simulation/producers/: creation.py  factories.py  producers.py  serialization.py
producer_service/src/simulation/producers/schemas/: access_log_schema.avsc  app_log_schema.avsc  metrics_schema.avsc
producer_service/src/simulation/result/: writer.py
producer_service/src/simulation/runner/: runners.py
producer_service/src/simulation/sender/: sender.py  senders_factory.py
producer_service/src/simulation/serialization/: serializers.py  serializers_factory.py
producer_service/src/simulation/serialization/schemas/: access_log_schema.avsc  metrics_schema.avsc
schema_registry/: docker-compose.yml
(+52 files in other folders)
