[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0"
name ="producer-service"
dependencies = [
    "confluent-kafka[avro,schemaregistry]",
    "scipy"
]

[project.scripts]
start-simulation = "simulation.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"simulation.producers.schemas" = ["*.avsc"]

